# amza-commercial-ai-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_CONTEXT.md  IMPLEMENTATION_ORDER.md  Makefile  PROJECT_STATE.md  README.md  docker-compose.yml
backend/: alembic.ini  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  exceptions.py  lifecycle.py  logging.py  main.py  security.py
backend/app/services/: conversation_context_assembler.py  conversation_summarization_service.py
backend/app/use_cases/: assign_to_advisor.py  authenticate_with_provider.py  get_conversation_history.py  list_open_opportunities.py  receive_incoming_message.py  return_to_ai.py  send_advisor_reply.py
backend/core/entities/: agent.py  contact.py  conversation.py  conversation_summary.py  internal_user.py  message.py  opportunity.py  organization.py
backend/core/enums/: agent.py  channel.py  message.py  opportunity.py  user.py
backend/core/events/: opportunity.py
backend/core/exceptions/: domain.py
backend/core/interfaces/: auth.py  providers.py  repositories.py
backend/core/value_objects/: identifiers.py
backend/infrastructure/ai/: openrouter.py
backend/infrastructure/auth/: google.py
backend/infrastructure/channels/: telegram.py
backend/infrastructure/database/: engine.py  (+2 more)
backend/migrations/: README  env.py
backend/scripts/: create_user.py  inspect_conversations.sql  register_telegram_webhook.py  seed_dev_data.py
backend/tests/: conftest.py  test_advisor_reply.py  test_openrouter_provider.py  test_security_and_identity.py
(+71 files in other folders)
